// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb Snapshots empty array 1`] = `
<ol
  className="sc-AykKC hieLbK"
/>
`;

exports[`Breadcrumb Snapshots no props 1`] = `
<ol
  className="sc-AykKC hieLbK"
>
  <li
    className="sc-AykKD duMGmI"
  >
    <div
      className="sc-AykKF fgdujz"
    >
      <div />
    </div>
  </li>
</ol>
`;

exports[`Breadcrumb Snapshots with child 1`] = `
<ol
  className="sc-AykKC hieLbK"
/>
`;

exports[`Breadcrumb Snapshots with path 1`] = `
<ol
  className="sc-AykKC hieLbK"
>
  <li
    className="sc-AykKD duMGmI"
  >
    <a
      className="sc-AykKE bmJenU"
      href="/"
    >
      <div>
        First page
      </div>
    </a>
  </li>
  <li
    className="sc-AykKD duMGmI"
  >
    <a
      className="sc-AykKE bmJenU"
      href="/level-2"
    >
      <div>
        Second page
      </div>
    </a>
  </li>
  <li
    className="sc-AykKD duMGmI"
  >
    <a
      className="sc-AykKE bmJenU"
      href="/level-3"
    >
      <div>
        Third page
      </div>
    </a>
  </li>
  <li
    className="sc-AykKD duMGmI"
  >
    <div
      className="sc-AykKF fgdujz"
    >
      <div>
        Fourth page
      </div>
    </div>
  </li>
</ol>
`;
